--- a/package.json
+++ b/package.json
@@ -4,24 +4,31 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "babel src --out-dir dist",
-    "start": "npm run build && babel-node ./dist/app.js",
-    "dev": "nodemon --ext js,graphql --exec babel-node ./src/app.js"
+    "dev": "nodemon src/app.js",
+    "build": "sucrase ./src -d ./dist --transforms imports",
+    "start": "sucrase ./src -d ./dist --transforms imports && node dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "bcrypt": "^3.0.6",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.1.0",
+    "express": "^4.17.1",
     "faker": "^4.1.0",
-    "graphql-import": "^0.7.1",
-    "graphql-yoga": "^1.18.2",
     "jwt-simple": "^0.5.6",
-    "mongoose": "^5.7.7"
+    "mongoose": "^5.7.7",
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "sucrase": "^3.11.0"
   }
 }
