--- a/package.json
+++ b/package.json
@@ -30,5 +30,9 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "sucrase": "^3.11.0"
+  },
+  "engines": {
+    "node": "12.x",
+    "npm": "6.12.1"
   }
 }
