--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "faker": "^4.1.0",
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.7.7",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "sucrase": "^3.12.0"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -28,11 +29,11 @@
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "sucrase": "^3.11.0"
+    "eslint-plugin-standard": "^4.0.1"
   },
   "engines": {
     "node": "12.x",
-    "npm": "6.12.1"
+    "npm": "6.12.1",
+    "yarn": "1.21.1"
   }
 }
