--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/app.js",
-    "build": "sucrase ./src -d ./dist --transforms imports",
-    "start": "sucrase ./src -d ./dist --transforms imports && node dist/app.js"
+    "dev": "nodemon src/app.ts",
+    "build": "sucrase ./src -d ./dist --transforms typescript,imports",
+    "start": "sucrase ./src -d ./dist --transforms typescript,imports && node ./dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -21,15 +21,26 @@
     "jwt-simple": "^0.5.6",
     "mongoose": "^5.7.7",
     "morgan": "^1.9.1",
-    "sucrase": "^3.12.0"
+    "sucrase": "^3.12.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.2",
+    "@types/mongodb": "^3.3.15",
+    "@types/mongoose": "^5.7.0",
+    "@types/morgan": "^1.7.37",
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
     "eslint": "^6.8.0",
     "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-import": "^2.20.0",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
+    "eslint-plugin-standard": "^4.0.1",
+    "prettier": "^1.19.1",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.7.5"
   },
   "engines": {
     "node": "12.x",
